fixed html so inner pannel is visible

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <div id="weather-app">
+    <div id="weather-container">
          <h2>Weather App</h2>
          <input type="text" id="city" placeholder="Enter city">
          <button onclick="getWeather()">Search</button>
